[metadata]
name = TwitterAdsWindsorApi
version = file: VERSION
author = Windsor AI
author_email = dev@windsor.ai
url = https://github.com/windsor-ai/TwitterAdsWindsorApi
description = Easy access to windsor.ai Twitter Ads APIs
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    requests~=2.25.1
zip_safe = false
packages = find:
test_suite=test
